5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4006/executions/1708_3063.log
== TEST (2019-04-29 14:12:43) 
-- CODE:
d = int(input("valor sorteado"))
a = int(input("pecas de ouro"))
b = input()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'INTEIRA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:13:32) 
-- CODE:
d = int(input("valor sorteado"))
a = int(input("pecas de ouro"))
b = input("nome da armadura")
c = int(input("fator de destreza"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'INTEIRA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:16:42) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
c = int(input("fator de destreza"))
d = int(input("valor sorteado"))
if(b=="INTEIRA" and a >= 200 )

-- ERROR:
File "XXXX", line 5
    if(b=="INTEIRA" and a >= 200 )
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:16:54) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
c = int(input("fator de destreza"))
d = int(input("valor sorteado"))
if(b=="INTEIRA") and (a >= 200 ))

-- ERROR:
File "XXXX", line 5
    if(b=="INTEIRA") and (a >= 200 ))
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:17:03) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
c = int(input("fator de destreza"))
d = int(input("valor sorteado"))
if(b=="INTEIRA") and (a >= 200 )

-- ERROR:
File "XXXX", line 5
    if(b=="INTEIRA") and (a >= 200 )
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:17:41) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
c = int(input("fator de destreza"))
d = int(input("valor sorteado"))
if(b=="INTEIRA" and a >= 200 )

-- ERROR:
File "XXXX", line 5
    if(b=="INTEIRA" and a >= 200 )
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:18:11) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
c = int(input("fator de destreza"))
d = int(input("valor sorteado"))
if(b=="INTEIRA") and (a >= 200) 

-- ERROR:
File "XXXX", line 5
    if(b=="INTEIRA") and (a >= 200) 
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:18:18) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
c = int(input("fator de destreza"))
d = int(input("valor sorteado"))
if(b=="INTEIRA")and(a >= 200) 

-- ERROR:
File "XXXX", line 5
    if(b=="INTEIRA")and(a >= 200) 
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:18:20) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
c = int(input("fator de destreza"))
d = int(input("valor sorteado"))
if(b=="INTEIRA")and(a >= 200) 

-- ERROR:
File "XXXX", line 5
    if(b=="INTEIRA")and(a >= 200) 
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:18:26) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
c = int(input("fator de destreza"))
d = int(input("valor sorteado"))
if (b=="INTEIRA")and(a >= 200) 

-- ERROR:
File "XXXX", line 5
    if (b=="INTEIRA")and(a >= 200) 
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:18:50) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
c = int(input("fator de destreza"))
d = int(input("valor sorteado"))
if(b=="INTEIRA")

-- ERROR:
File "XXXX", line 5
    if(b=="INTEIRA")
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:18:51) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
c = int(input("fator de destreza"))
d = int(input("valor sorteado"))
if(b=="INTEIRA")

-- ERROR:
File "XXXX", line 5
    if(b=="INTEIRA")
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:19:01) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
c = int(input("fator de destreza"))
d = int(input("valor sorteado"))
if(b=="INTEIRA:")

-- ERROR:
File "XXXX", line 5
    if(b=="INTEIRA:")
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:20:10) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
c = int(input("fator de destreza"))
d = int(input("valor sorteado"))
if("INTEIRA",==B)

-- ERROR:
File "XXXX", line 5
    if("INTEIRA",==B)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:20:17) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
c = int(input("fator de destreza"))
d = int(input("valor sorteado"))
if("INTEIRA"==B)

-- ERROR:
File "XXXX", line 5
    if("INTEIRA"==B)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:20:21) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
c = int(input("fator de destreza"))
d = int(input("valor sorteado"))
if("INTEIRA"== B)

-- ERROR:
File "XXXX", line 5
    if("INTEIRA"== B)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:21:07) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
c = int(input("fator de destreza"))
d = int(input("valor sorteado"))
if(b=="inteira")

-- ERROR:
File "XXXX", line 5
    if(b=="inteira")
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:21:21) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
c = int(input("fator de destreza"))
d = int(input("valor sorteado"))
if(b==,"inteira")

-- ERROR:
File "XXXX", line 5
    if(b==,"inteira")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:21:54) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
c = int(input("fator de destreza"))
d = int(input("valor sorteado"))
if(b=="inteira"):
	

-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:22:32) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
c = int(input("fator de destreza"))
d = int(input("valor sorteado"))
if(b=="inteira") and (a >= 200):
	

-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:23:12) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
c = int(input("fator de destreza"))
d = int(input("valor sorteado"))
if(b=="inteira") and (a >= 200):
	e=30 * d - 20
	print(e)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:23:50) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
d = int(input("valor sorteado"))
if(b=="inteira") and (a >= 200):
	e=30 * d - 20
	print(e)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:25:34) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
d = int(input("valor sorteado"))
if(b=="INTEIRA") and (a >= 200):
	e=30 * d - 20
	print(e)
	elif(b=="MALHA") and (a)

-- ERROR:
File "XXXX", line 7
    elif(b=="MALHA") and (a)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:25:41) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
d = int(input("valor sorteado"))
if(b=="INTEIRA") and (a >= 200):
	e=30 * d - 20
	print(e)
	

-- ERROR:
File "XXXX", line 7
    elif(b=="MALHA") and (a)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:26:25) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
d = int(input("valor sorteado"))
if(b=="INTEIRA") and (a >= 200):
	e=30 * d - 20
	print(e)
	elif()

-- ERROR:
File "XXXX", line 7
    elif()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:27:11) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
d = int(input("valor sorteado"))
if(b=="INTEIRA") and (a >= 200):
	e=30 * d - 20
	print(e)
	elif(b=="MALHA") and (a==50):
		

-- ERROR:
File "XXXX", line 7
    elif(b=="MALHA") and (a==50):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:27:18) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
d = int(input("valor sorteado"))
if(b=="INTEIRA") and (a >= 200):
	e=30 * d - 20
	print(e)
	elif(b=="MALHA") and (a== 50):
		

-- ERROR:
File "XXXX", line 7
    elif(b=="MALHA") and (a== 50):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:27:24) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
d = int(input("valor sorteado"))
if(b=="INTEIRA") and (a >= 200):
	e=30 * d - 20
	print(e)
	elif(b=="MALHA") and (a== 50):
		
		

-- ERROR:
File "XXXX", line 7
    elif(b=="MALHA") and (a== 50):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:27:29) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
d = int(input("valor sorteado"))
if(b=="INTEIRA") and (a >= 200):
	e=30 * d - 20
	print(e)
	elif(b=="MALHA") and (a == 50):
		
		

-- ERROR:
File "XXXX", line 7
    elif(b=="MALHA") and (a == 50):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:28:21) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
d = int(input("valor sorteado"))
if(b=="INTEIRA") and (a >= 200):
	e=30 * d - 20
	print(e)
	elif(b=="MALHA") and (a == 50):
		e=15 * d - 1
		
		

-- ERROR:
File "XXXX", line 7
    elif(b=="MALHA") and (a == 50):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:29:37) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
d = int(input("valor sorteado"))
if(b=="INTEIRA") and (a >= 200):
	e=30 * d - 20
	print(e)
	elif(b=="MALHA") and (a == 50):
		e=15 * d - 1
		print(e)
		
		

-- ERROR:
File "XXXX", line 7
    elif(b=="MALHA") and (a == 50):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:29:48) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
d = int(input("valor sorteado"))
if(b=="INTEIRA") and (a >= 200):
	e=30 * d - 20
	print(e)
	elif(b=="MALHA") and (a==50):
		e=15 * d - 1
		print(e)
		
		

-- ERROR:
File "XXXX", line 7
    elif(b=="MALHA") and (a==50):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:29:49) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
d = int(input("valor sorteado"))
if(b=="INTEIRA") and (a >= 200):
	e=30 * d - 20
	print(e)
	elif(b=="MALHA") and (a==50):
		e=15 * d - 1
		print(e)
		
		

-- ERROR:
File "XXXX", line 7
    elif(b=="MALHA") and (a==50):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:29:49) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
d = int(input("valor sorteado"))
if(b=="INTEIRA") and (a >= 200):
	e=30 * d - 20
	print(e)
	elif(b=="MALHA") and (a==50):
		e=15 * d - 1
		print(e)
		
		

-- ERROR:
File "XXXX", line 7
    elif(b=="MALHA") and (a==50):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:29:50) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
d = int(input("valor sorteado"))
if(b=="INTEIRA") and (a >= 200):
	e=30 * d - 20
	print(e)
	elif(b=="MALHA") and (a==50):
		e=15 * d - 1
		print(e)
		
		

-- ERROR:
File "XXXX", line 7
    elif(b=="MALHA") and (a==50):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:29:50) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
d = int(input("valor sorteado"))
if(b=="INTEIRA") and (a >= 200):
	e=30 * d - 20
	print(e)
	elif(b=="MALHA") and (a==50):
		e=15 * d - 1
		print(e)
		
		

-- ERROR:
File "XXXX", line 7
    elif(b=="MALHA") and (a==50):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:29:51) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
d = int(input("valor sorteado"))
if(b=="INTEIRA") and (a >= 200):
	e=30 * d - 20
	print(e)
	elif(b=="MALHA") and (a==50):
		e=15 * d - 1
		print(e)
		
		

-- ERROR:
File "XXXX", line 7
    elif(b=="MALHA") and (a==50):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:32:17) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
d = int(input("valor sorteado"))
if(b=="INTEIRA") and (a >= 200):
	e=30 * d - 20
	print(e)
	elif(b=="MALHA") and (a < 50 and < 199):
		e=15 * d - 1
		print(e)
	elif(b=="PLACA") and (a )
		
		

-- ERROR:
File "XXXX", line 7
    elif(b=="MALHA") and (a < 50 and < 199):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:33:23) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
d = int(input("valor sorteado"))
if(b=="INTEIRA") and (a >= 200):
	e=30 * d - 20
	print(e)
	elif(b=="MALHA") and (a < 50 and < 99):
		e=15 * d - 1
		print(e)
	elif(b=="PLACA") and (a > 100 and < 199):
		e= 20 * d - 18
		
		

-- ERROR:
File "XXXX", line 7
    elif(b=="MALHA") and (a < 50 and < 99):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:35:04) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
d = int(input("valor sorteado"))
if(b=="INTEIRA") and (a >= 200):
	e=30 * d - 20
	print(e)
elif(b=="MALHA") and (a < 50 or < 99):
		e=15 * d - 1
		print(e)
elif(b=="PLACA") and (a > 100 or < 199):
		e= 20 * d - 18
		print(e)
else ()
		

-- ERROR:
File "XXXX", line 7
    elif(b=="MALHA") and (a < 50 or < 99):
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:35:05) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
d = int(input("valor sorteado"))
if(b=="INTEIRA") and (a >= 200):
	e=30 * d - 20
	print(e)
elif(b=="MALHA") and (a < 50 or < 99):
		e=15 * d - 1
		print(e)
elif(b=="PLACA") and (a > 100 or < 199):
		e= 20 * d - 18
		print(e)
else ()
		

-- ERROR:
File "XXXX", line 7
    elif(b=="MALHA") and (a < 50 or < 99):
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:36:43) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
d = int(input("valor sorteado"))
if(b=="INTEIRA") and (a >= 200):
	e=30 * d - 20
	print(e)
elif(b=="MALHA") and (a < 50 or < 99):
		e=15 * d - 1
		print(e)
elif(b=="PLACA") and (a > 100 or < 199):
		e= 20 * d - 18
		print(e)
elif(d > 8) and (d < 1):
	print("Entrada invalida")
		

-- ERROR:
File "XXXX", line 7
    elif(b=="MALHA") and (a < 50 or < 99):
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:38:07) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
d = int(input("valor sorteado"))
if(b=="INTEIRA") and (a >= 200):
	e=30 * d - 20
	print(e)
elif(b=="MALHA") and ()
		e=15 * d - 1
		print(e)
elif(b=="PLACA") and (a > 100 or < 199):
		e= 20 * d - 18
		print(e)
elif(d > 8) and (d < 1):
	print("Entrada invalida")
		

-- ERROR:
File "XXXX", line 7
    elif(b=="MALHA") and ()
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:38:49) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
d = int(input("valor sorteado"))
if(b=="INTEIRA") and (a >= 200):
	e=30 * d - 20
	print(e)
elif(b=="MALHA") and (a==50)
		e=15 * d - 1
		print(e)
elif(b=="PLACA") and (a > 100 or < 199):
		e= 20 * d - 18
		print(e)
elif(d > 8) and (d < 1):
	print("Entrada invalida")
		

-- ERROR:
File "XXXX", line 7
    elif(b=="MALHA") and (a==50)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:45:16) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
d = int(input("valor sorteado"))
if(b=="INTEIRA") and (a >= 200):
	e=30 * d - 20
	print(e)
elif(b=="PLACA") and (a=100)
		e=20 * d - 18
		print(e)
elif(b=="MALHA") and (a==)
		e= 20 * d - 1
		print(e)
elif(d > 8) and (d < 1):
	print("Entrada invalida")
else :
	print("PO insuficiente")
		

-- ERROR:
File "XXXX", line 7
    elif(b=="PLACA") and (a=100)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:45:17) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
d = int(input("valor sorteado"))
if(b=="INTEIRA") and (a >= 200):
	e=30 * d - 20
	print(e)
elif(b=="PLACA") and (a=100)
		e=20 * d - 18
		print(e)
elif(b=="MALHA") and (a==)
		e= 20 * d - 1
		print(e)
elif(d > 8) and (d < 1):
	print("Entrada invalida")
else :
	print("PO insuficiente")
		

-- ERROR:
File "XXXX", line 7
    elif(b=="PLACA") and (a=100)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:45:28) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
d = int(input("valor sorteado"))
if(b=="INTEIRA") and (a >= 200):
	e=30 * d - 20
	print(e)
elif(b=="PLACA") and (a = 100)
		e=20 * d - 18
		print(e)
elif(b=="MALHA") and (a==)
		e= 20 * d - 1
		print(e)
elif(d > 8) and (d < 1):
	print("Entrada invalida")
else :
	print("PO insuficiente")
		

-- ERROR:
File "XXXX", line 7
    elif(b=="PLACA") and (a = 100)
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:45:36) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
d = int(input("valor sorteado"))
if(b=="INTEIRA") and (a >= 200):
	e=30 * d - 20
	print(e)
elif(b=="PLACA") and (a==100)
		e=20 * d - 18
		print(e)
elif(b=="MALHA") and (a==)
		e= 20 * d - 1
		print(e)
elif(d > 8) and (d < 1):
	print("Entrada invalida")
else :
	print("PO insuficiente")
		

-- ERROR:
File "XXXX", line 7
    elif(b=="PLACA") and (a==100)
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:45:45) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
d = int(input("valor sorteado"))
if(b=="INTEIRA") and (a >= 200):
	e=30 * d - 20
	print(e)
elif(b=="PLACA") and (a== 100)
		e=20 * d - 18
		print(e)
elif(b=="MALHA") and (a==)
		e= 20 * d - 1
		print(e)
elif(d > 8) and (d < 1):
	print("Entrada invalida")
else :
	print("PO insuficiente")
		

-- ERROR:
File "XXXX", line 7
    elif(b=="PLACA") and (a== 100)
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:48:40) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
d = int(input("valor sorteado"))
if(b=="INTEIRA") and (a >= 200):
	e=30 * d - 20
	print(e)
elif(b=="PLACA") and (a==100 or < 199)
		e=20 * d - 18
		print(e)
elif(b=="MALHA") and (a==)
		e= 20 * d - 1
		print(e)
elif(d > 8) and (d < 1):
	print("Entrada invalida")
else :
	print("PO insuficiente")
		

-- ERROR:
File "XXXX", line 7
    elif(b=="PLACA") and (a==100 or < 199)
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:50:21) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
d = int(input("valor sorteado"))
if(b=="INTEIRA") and (a >= 200):
	e=30 * d - 20
	print(e)
elif(b=="PLACA") and (a<=100 or < 199)
		e=20 * d - 18
		print(e)
elif(b=="MALHA") and (a==)
		e= 20 * d - 1
		print(e)
elif(d > 8) and (d < 1):
	print("Entrada invalida")
else :
	print("PO insuficiente")
		

-- ERROR:
File "XXXX", line 7
    elif(b=="PLACA") and (a<=100 or < 199)
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:51:18) 
-- CODE:
a = int(input("pecas de ouro"))
b = input("nome da armadura")
d = int(input("valor sorteado"))
if(b=="INTEIRA") and (a >= 200):
	e=30 * d - 20
	print(e)
elif(b=="PLACA") and (a<=100 or < 199)
		e=20 * d - 18
		print(e)
elif(b=="MALHA") and (a==)
		e= 15 * d - 1
		print(e)
elif(d > 8) and (d < 1):
	print("Entrada invalida")
else :
	print("PO insuficiente")
		

-- ERROR:
File "XXXX", line 7
    elif(b=="PLACA") and (a<=100 or < 199)
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
